infra/kubernetes/platform/gateway/public-http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-http-to-https
  namespace: traefik-public
spec:
  parentRefs:
    - name: gramly-public
      sectionName: http
  hostnames:
    - auth.gramly.tech
    - vpn.gramly.tech
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
